--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v4
-      - name: View downloaded repo
-        run: ls -l
+        uses: actions/checkout@v4      
       - name: Install dependencies
         run: npm ci
+      - name: Linter
+        run: npm run lint 
+      - name: Test 
+        run: npm run test
+      - name: Build
+        run: npm run Build
+      - name: View folder
+        run: ls -l
