--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,14 +13,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v4      
+        uses: actions/checkout@v4     
       - name: Install dependencies
         run: npm ci
       - name: Linter
-        run: npm run lint 
-      - name: Test 
+        run: npm run lint
+      - name: Test
         run: npm run test
       - name: Build
         run: npm run build
       - name: View folder
         run: ls -l
+      - name: Upload ftp
+        uses: sebastianpopp/ftp-action@releases/v2
+        with:
+          host: ${{ FTP_HOST }}
+          user: ${{ FTP_USER }}
+          password: ${{ FTP_PASS }}
+          localDir: "dist"
+          remoteDir: "htdocs"
+          options: "--delete --asci"
